--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "scripts": {
-    "start": "webpack-dev-server --no-hot --live-reload",
+    "_comment": "start: webpack-dev-server --no-hot --live-reload",
+    "start": "SET NODE_OPTIONS=--openssl-legacy-provider && webpack-dev-server --no-hot --live-reload",
     "build": "webpack"
   },
   "devDependencies": {
