--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "_comment": "start: webpack-dev-server --no-hot --live-reload",
     "start": "SET NODE_OPTIONS=--openssl-legacy-provider && webpack-dev-server --no-hot --live-reload",
     "build": "webpack"
   },
   "devDependencies": {
-    "@types/dat.gui": "^0.7.7",
+    "@types/dat.gui": "^0.7.13",
+    "@types/stats.js": "^0.17.4",
     "@types/webgl2": "0.0.6",
+    "gh-pages": "^6.3.0",
     "ts-loader": "^9.2.5",
     "typescript": "^4.4.2",
     "webpack": "^5.52.0",
